# Quills.Fun-Auto-Bot

./: .env  Cargo.toml  README.md
src/: main.rs
